jenkins/Cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-service # Nom du service
  labels:
    app: school-app # Étiquettes pour identifier le service
spec:
  selector:
    app: school-app # Sélecteur pour correspondre aux pods avec cette étiquette
  ports:
    - protocol: TCP
      port: 8080 # Port que le service expose
      targetPort: 8080 # Port sur le pod auquel le service redirige le trafic
  type: ClusterIP # Type de service, le rendant accessible uniquement dans le cluster
